# EssenseStream

./: .gitignore  CMakeCache.txt  CMakeLists.txt  EssenseStream.cpp  LICENSE  README.md  Run.cpp
CMake build files/: ALL_BUILD.vcxproj  EssenseLibrary.vcxproj  EssenseLibrary.vcxproj.filters  Runnable.vcxproj  Runnable.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Debug/: EssenseLibrary.lib
EssenseLibrary.dir/Debug/EssenseLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
EssenseSource/: EssenseStream.sln  EssenseStream.vcxproj  EssenseStream.vcxproj.filters
EssenseStream/x64/Debug/: EssenseStream.exe.recipe  EssenseStream.ilk  vc143.idb
Runnable.dir/Debug/: Runnable.exe.recipe  Runnable.ilk
Runnable.dir/Debug/Runnable.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Runnable.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_tree/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EssenseLibrary.vcxproj  EssenseLibrary.vcxproj.filters  EssenseStream.sln  Runnable.vcxproj  Runnable.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_tree/Debug/: EssenseLibrary.lib
build_tree/EssenseLibrary.dir/Debug/: EssenseLibrary.lib.recipe
build_tree/Runnable.dir/Debug/: Runnable.exe.recipe  Runnable.ilk
include/: EssenseStream.h
(+33 files in other folders)
